--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,13 @@
 * {
   font-family: "Roboto";
-  font-size: 1.2em;
 }
 
 body {
   padding: 60px;
+}
+
+input {
+  color: gray;
+  font-size: 1.2rem;
+  width: 100%;
 }
